2011-07-21  vadim  <vadim@netcitadel.com>

	* XMLTools.cpp (convert): see #2577 Updated error message that
	appears when user tries to open .fwb file created by the future
	version of fwbuilder.

	* TextFileEditor.cpp (save): fixes #2567 "If file doesn't exist
	when clicking 'edit file', then you have to hit save button twice".
	The bug affected "edit file" function in the Address Table object
	dialog.

	* NATCompiler_pf_writers.cpp (_printAddr): fixes #2590 "PF: NAT
	compiler fails when run-time address table object is used in a
	rule"

	* RoutingCompiler.cpp (processNext): fixes #2565 "Run-time dns
	name or address table in routing policy -> crash". Compiler for PF
	crashed if user placed run-time DNSName object in "destination"
	of a routing rule.

	* RuleSetModel.cpp (initRule): see #2515 Expanded set of options
	the user can change to pre-set parameters in the new policy rules
	they create. Now user can set default values for action ("Deny" or
	"Accept"), direction, the "stateless" flag and logging.

	* FindObjectWidget.cpp (matchAttr): see #2516 "Enhance Find to
	include searching for IP addresses in ranges". Function "find"
	now finds ip addresses inside address ranges.

2011-07-20  vadim  <vadim@netcitadel.com>

	* FWBTree.cpp (init_statics): see #2619 "Attempting to
	copy-and-paste a tag service results in an error". Pasting of a
	TagService object to the "Tag Services" group did not work.

	* RuleSetView.cpp (itemDoubleClicked): fixes #2566, #2618 Fix for
	the regression introduced when I worked on #2566 "Double-clicking
	on rule when program first starts results in empty editor pane".
	Double click on the rule number should not do anything, but double
	click on rule options, comment and other fields should open the
	editor. Change done for #2566 broke this.

2011-07-20  Vadim Kurland  <vadim@netcitadel.com>

	* ObjectMatcher.cpp (dispatch): removed optimization in
	dispatch(IPv4*,void*) and dispatch(IPv6*, void*) that assumed