@@ -640,11 +640,11 @@
               </widget>
               <widget class="QWidget" name="page_35">
                <layout class="QGridLayout" name="gridLayout_40">
-                <property name="margin">
-                 <number>0</number>
-                </property>
                 <property name="horizontalSpacing">
                  <number>6</number>
+                </property>
+                <property name="margin">
+                 <number>0</number>
                 </property>
                 <item row="0" column="0">
                  <widget class="MetricEditorPanel" name="w_MetricEditorPanel" native="true"/>
@@ -710,9 +710,6 @@
    <addaction name="toolbarFileOpen"/>
    <addaction name="toolbarFileSave"/>
    <addaction name="separator"/>
-   <addaction name="backAction"/>
-   <addaction name="forwardAction"/>
-   <addaction name="separator"/>
    <addaction name="newObjectAction"/>
    <addaction name="findAction"/>
    <addaction name="separator"/>
@@ -725,7 +722,7 @@
      <x>0</x>
      <y>0</y>
      <width>1124</width>
-     <height>20</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="editMenu">
@@ -2287,38 +2284,6 @@
     </hint>
     <hint type="destinationlabel">
      <x>571</x>
-     <y>422</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>backAction</sender>
-   <signal>triggered()</signal>
-   <receiver>FWBMainWindow_q</receiver>
-   <slot>back()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>561</x>
-     <y>422</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>forwardAction</sender>
-   <signal>triggered()</signal>
-   <receiver>FWBMainWindow_q</receiver>
-   <slot>forward()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>561</x>
      <y>422</y>
     </hint>
    </hints>
