@@ -150,9 +150,6 @@ public slots:
     
     void editorPanelTabChanged(int);
     
-    void back();
-    void forward();
-    
     void minimize();
     void maximize();
 
