@@ -227,9 +227,6 @@ public:
  public slots:
     void newObject();
     
-    virtual void back();
-    virtual void forward();
-    
     virtual void lockObject();
     virtual void unlockObject();
  
